# cssc-framework

./: .gitignore  CODEOWNERS  MAINTAINERS  README.md  SECURITY.md
apps/python-app/libs/cssc_common/: README.md  pyproject.toml
apps/python-app/libs/cssc_common/cssc_common/: __init__.py  cache.py  config.py  github.py  models.py
apps/python-app/libs/cssc_common/tests/: test_cache.py  test_github.py
apps/python-app/services/dashboard-web/: Dockerfile  README.md  pyproject.toml  requirements.txt
apps/python-app/services/dashboard-web/deploy/helm/dashboard-web/: Chart.yaml  values.yaml
apps/python-app/services/dashboard-web/deploy/helm/dashboard-web/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  service.yaml
apps/python-app/services/dashboard-web/src/dashboard_web/: __init__.py  app.py  clients.py  config.py
apps/python-app/services/dashboard-web/src/dashboard_web/stages/: __init__.py  acquisition.py  base.py
apps/python-app/services/dashboard-web/src/dashboard_web/static/css/: styles.css
apps/python-app/services/dashboard-web/src/dashboard_web/templates/: base.html  index.html
apps/python-app/services/dashboard-web/src/dashboard_web/templates/stages/: _error.html  _generic.html  acquisition.html
apps/python-app/services/dashboard-web/src/dashboard_web/web/: __init__.py  routes.py
apps/python-app/services/dashboard-web/tests/: test_acquisition.py  test_app.py
apps/python-app/services/issues-service/: Dockerfile  README.md  pyproject.toml
apps/python-app/services/issues-service/deploy/helm/issues-service/: Chart.yaml  values.yaml
apps/python-app/services/issues-service/deploy/helm/issues-service/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  service.yaml
apps/python-app/services/issues-service/src/issues_service/: __init__.py  app.py  client.py  metadata.py
apps/python-app/services/issues-service/tests/: test_app.py  test_metadata.py
apps/python-app/services/packages-service/: Dockerfile  README.md  pyproject.toml  requirements.txt
apps/python-app/services/packages-service/deploy/helm/packages-service/: Chart.yaml  values.yaml
apps/python-app/services/packages-service/deploy/helm/packages-service/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  (+3 more)
apps/python-app/services/packages-service/src/packages_service/: __init__.py  app.py  client.py
apps/python-app/services/packages-service/tests/: test_app.py
(+157 files in other folders)
