[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cssc-common"
version = "0.1.0"
description = "Shared GitHub client, TTL cache, and models for the CSSC Dashboard services."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["cssc_common*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
